# sentinel

./: .gitignore  README.md  devenv.nix  flake.nix  pyproject.toml  writing_plugins.md
backend/plugins/sentinel-opencv/sentinel_opencv/: __init__.py
backend/plugins/sentinel-ultralytics/: pyproject.toml
backend/plugins/sentinel-ultralytics/sentinel_ultralytics/: __init__.py
backend/sentinel-core/sentinel_core/video/: __init__.py
backend/sentinel-server/: pyproject.toml
backend/sentinel-server/sentinel_server/: __main__.py  auth.py  cli.py  config.py  plugins.py  start.py
backend/sentinel-server/sentinel_server/alert/: __init__.py  video.py
frontend/: .editorconfig  devenv.nix  next.config.mjs
frontend/app/: layout.tsx  page.tsx
frontend/app/components/: LoginForm.tsx
frontend/app/dashboard/: page.tsx
frontend/app/interfaces/: general.tsx
host-example/: pyproject.toml
model/: devenv.nix
model-gen/: devenv.nix  pyproject.toml
model-gen/sentinel_model_gen/: yolo.ipynb
model/sentinel_model_gen/: yolo.ipynb
sentinel/: __main__.py  cli.py  detect.py  pyproject.toml  video.py
sentinel-core/sentinel_core/alert/: filters.py
sentinel-desktop-notification-subscriber/: pyproject.toml
sentinel-mediapipe/: pyproject.toml
sentinel-nextjs/: devenv.nix  package-lock.json  package.json
sentinel-nextjs/app/: globals.css  page.tsx
sentinel-nextjs/app/components/: LoginForm.tsx
sentinel-nextjs/app/dashboard/: page.tsx
sentinel-opencv/: pyproject.toml
sentinel/alert/: __init__.py  filters.py  subscribers.py  video.py
sentinel/sentinel/: cli.py
sentinel/video/: __init__.py  detect.py
