[tool.poetry]
name = "Sentinel"
version = "0.1.0"
description = "Home security and alert system."
authors = ["Dixon Sean Low Yan Feng", "Keith Neo Kai Si"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
