[tool.poetry]
name = "Sentinel"
version = "0.1.0"
description = "Home security and alert system."
authors = ["Dixon Sean Low Yan Feng", "Keith Neo Kai Si"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mediapipe = "^0.10.15"
opencv-python = "^4.10.0.84"
notify-py = "^0.3.43"
aioreactive = "^0.20.0"
expression = "^5.3.0"

[tool.poetry.scripts]
sentinel = "sentinel.cli:entry"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
